Implementar endpoint para generar facturas a un cliente. Agregar validaciones para los campos del formulario de facturas

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,11 @@
 NotEmpty.cliente.nombre=El nombre no puede estar vacío
 NotEmpty.cliente.apellido=El apellido no puede estar vacío
 NotEmpty.cliente.email=El email no puede estar vacío
+NotEmpty.factura.descripcion=La descripción no puede estar vacía
 Size.cliente.nombre=El nombre es demasiado largo (máximo {1} caracteres)
 Size.cliente.apellido=El apellido es demasiado largo (máximo {1} caracteres)
 Size.cliente.email=El email es demasiado largo (máximo {1} caracteres)
+Size.factura.descripcion=La descripción es demasiado larga (máximo {1} caracteres)
+Size.factura.observacion=La observación es demasiado larga (máximo {1} caracteres)
 Email.cliente.email=El email no es válido
 DateTimeFormat.cliente.fechaCreacion=El formato de la fecha de creación no es válido
