Implementar i18n en la vista de detalle del cliente

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,12 +22,22 @@ Text.cliente.nombre=First name
 Text.cliente.apellido=Last name
 Text.cliente.email=Email
 Text.cliente.fechaCreacion=Creation date
-Text.cliente.crud.crear=+ Add client
+Text.cliente.foto=Profile photo
+Text.cliente.crud.crear=+ Add customer
+Text.cliente.listar.titulo=Customer list
+Text.cliente.listar.btn=Back to customer list
+Text.cliente.detalle.titulo=Customer details
+Text.cliente.error.noEncontrado=Customer not found
 
+Text.factura.numero=Invoice ID
+Text.factura.descripcion=Description
+Text.factura.fechaCreacion=Creation date
 Text.factura.crud.crear=+ Create invoice
+Text.factura.listar.titulo=Customer's invoices
+Text.factura.error.sinFacturas=There aren't any invoices for this customer
 
 Text.nav.inicio=Home
-Text.nav.nuevoCliente=Add clients
+Text.nav.nuevoCliente=Add customers
 Text.nav.idioma=Language
 Text.nav.iniciarSesion=Sign in
 Text.nav.cerrarSesion=Sign out
