--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -22,9 +22,19 @@ Text.cliente.nombre=Nombre
 Text.cliente.apellido=Apellido
 Text.cliente.email=Email
 Text.cliente.fechaCreacion=Fecha de creación
+Text.cliente.foto=Foto de perfil
 Text.cliente.crud.crear=+ Agregar cliente
+Text.cliente.listar.titulo=Listado de clientes
+Text.cliente.listar.btn=Volver al listado de clientes
+Text.cliente.detalle.titulo=Detalle del cliente
+Text.cliente.error.noEncontrado=No se ha encontrado al cliente especificado
 
+Text.factura.numero=Número de factura
+Text.factura.descripcion=Descripción
+Text.factura.fechaCreacion=Fecha de creación
 Text.factura.crud.crear=+ Crear factura
+Text.factura.listar.titulo=Facturas del cliente
+Text.factura.error.sinFacturas=No hay facturas asignadas para este cliente
 
 Text.nav.inicio=Inicio
 Text.nav.nuevoCliente=Agregar cliente
