Implementar i18n en la vista de login

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -73,3 +73,13 @@ Text.paginator.primera=First
 Text.paginator.anterior=Previous
 Text.paginator.siguiente=Next
 Text.paginator.ultima=Last
+
+Text.login.titulo=Sign in
+Text.login.nombreUsuario=Username
+Text.login.contrasenia=Password
+Text.login.btn=Login
+Text.login.error.tieneSesion=You are currently logged in
+Text.login.error.credencialesIncorrectas=Incorrect credentials, try it again
+Text.login.error.403=Access denied
+Text.login.error.403.detalles=You don't have permission to enter on this page
+Text.login.exito.cerrarSesion=Logout successfully
