--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -73,3 +73,13 @@ Text.paginator.primera=Primera
 Text.paginator.anterior=Anterior
 Text.paginator.siguiente=Siguiente
 Text.paginator.ultima=Última
+
+Text.login.titulo=Iniciar sesión
+Text.login.nombreUsuario=Nombre de usuario
+Text.login.contrasenia=Contraseña
+Text.login.btn=Login
+Text.login.error.tieneSesion=Ya has iniciado sesión anteriormente
+Text.login.error.credencialesIncorrectas=Credenciales incorrectas, inténtalo nuevamente
+Text.login.error.403=Acceso denegado
+Text.login.error.403.detalles=No tienes permiso para acceder a esta página
+Text.login.exito.cerrarSesion=Has cerrado sesión con éxito
